Bug 619785 - nsComputedDOMStyle::DoGetMozBackgroundSize leaks valY when it has problems with valX, r+a=bz